Simplified TitoConfiguration by removing one level

--- a/TestConsole/appsettings.json
+++ b/TestConsole/appsettings.json
@@ -5,14 +5,12 @@
     "Event": {
       "EventName": "anders-test",
       "WebHookSecurityToken": "",
-      "Discount": {
-        "Pct": false,
-        "Value": 450,
-        "TicketIds": [
-          "53qhmtt-c5q",
-          "7khfdtb0mso"
-        ]
-      }
+      "DiscountPct": false,
+      "DiscountValue": 450,
+      "TicketIds": [
+        "53qhmtt-c5q",
+        "7khfdtb0mso"
+      ]
     }
   }
 }
