--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,21 +5,19 @@
     }
   },
   "AllowedHosts": "*",
- 
+
   "Tito": {
     "AccountName": "CNUG",
     "ApiToken": "",
     "Event": {
       "EventName": "anders-test",
       "WebHookSecurityToken": "",
-      "Discount": {
-        "Pct": false,
-        "Value": 450,
-        "TicketIds": [
-          "53qhmtt-c5q",
-          "7khfdtb0mso"
-        ]
-      }
+      "DiscountPct": false,
+      "DiscountValue": 450,
+      "TicketIds": [
+        "53qhmtt-c5q",
+        "7khfdtb0mso"
+      ]
     }
   }
 }
