--- a/AzureDevOpsBuild.yaml
+++ b/AzureDevOpsBuild.yaml
@@ -23,7 +23,7 @@ steps:
 
 - task: PublishTestResults@2
   inputs:
-    testRunner: VSTest
+    testRunner: xUnit
     testResultsFiles: '**/*.trx'
 
 - script: |
