Gmail sender with template support. Configuration of reply email, username and password

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,6 +9,9 @@
   "Tito": {
     "AccountName": "CNUG",
     "ApiToken": "",
+    "ReplyEmail": null,
+    "EmailUsername": null,
+    "EmailPassword": null,
     "Event": {
       "EventName": "anders-test",
       "WebHookSecurityToken": "",
