--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,7 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-
   "Tito": {
     "AccountName": "CNUG",
     "ApiToken": "",
@@ -22,5 +21,8 @@
         "7khfdtb0mso"
       ]
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
   }
 }
