MandrillApp is now the default referral email sender

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,9 +8,11 @@
   "Tito": {
     "AccountName": "CNUG",
     "ApiToken": "",
-    "ReplyEmail": null,
-    "EmailUsername": null,
-    "EmailPassword": null,
+    "FromEmail": null,
+    "FromName": null,
+    "GmailEmailUsername": null,
+    "GmailEmailPassword": null,
+    "MandrillAppApiKey": null,
     "Event": {
       "EventName": "anders-test",
       "WebHookSecurityToken": "",
